Statments page added

--- a/App/MyMoneyTracker/app/src/main/res/values/strings.xml
+++ b/App/MyMoneyTracker/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <!-- Menu-->
     <string name="menu_home">Home</string>
-    <string name="menu_statement">Statement</string>
+    <string name="menu_statement">Statements</string>
     <string name="menu_transaction">Add Transaction</string>
     <string name="menu_category">Add Category</string>
     <string name="menu_settings">Settings</string>
